force-app/main/default/objects/eSign_Configuration__mdt/eSign_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>eSign Configuration</label>
    <pluralLabel>eSign Configurations</pluralLabel>
</CustomObject>