force-app/main/default/objects/eSign_Configuration__mdt/fields/cancelURL__c.field-meta.xml
<CustomField>
    <fullName>cancelURL__c</fullName>
    <label>URL d&apos;annulation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>