force-app/main/default/objects/eSign_Configuration__mdt/fields/documentCheckBoxTexts__c.field-meta.xml
<CustomField>
    <fullName>documentCheckBoxTexts__c</fullName>
    <label>Textes du document de transaction</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>