force-app/main/default/objects/eSign_Configuration__mdt/fields/documentTitle__c.field-meta.xml
<CustomField>
    <fullName>documentTitle__c</fullName>
    <label>Titre du document de la transaction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>