force-app/main/default/objects/eSign_Configuration__mdt/fields/failURL__c.field-meta.xml
<CustomField>
    <fullName>failURL__c</fullName>
    <label>URL d&apos;échec</label>
    <length>255</length>
    <type>Text</type>
</CustomField>