force-app/main/default/objects/eSign_Configuration__mdt/fields/ID_du_profil_cachet_serveur__c.field-meta.xml
<CustomField>
    <fullName>ID_du_profil_cachet_serveur__c</fullName>
    <description>profil à assigner aux signatures cachet serveur de universign. cette valeur est utilisée pour constituer le JSON (dans l&apos;objet serverSignatureOptions attribut &quot;profile&quot;) envoyé à universign par la classe apex Convsta_WS_Helper</description>
    <label>ID du profil cachet serveur</label>
    <length>10</length>
    <type>Text</type>
</CustomField>