force-app/main/default/objects/eSign_Configuration__mdt/fields/ID_organization__c.field-meta.xml
<CustomField>
    <fullName>ID_organization__c</fullName>
    <label>ID de l&apos;organisation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>