force-app/main/default/objects/eSign_Configuration__mdt/fields/ID_profile__c.field-meta.xml
<CustomField>
    <fullName>ID_profile__c</fullName>
    <label>ID du profil</label>
    <length>255</length>
    <type>Text</type>
</CustomField>