force-app/main/default/objects/eSign_Configuration__mdt/fields/ID_transacCodeApplicationSource__c.field-meta.xml
<CustomField>
    <fullName>ID_transacCodeApplicationSource__c</fullName>
    <label>ID du code de transac. de l&apos;app source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>