force-app/main/default/objects/eSign_Configuration__mdt/fields/ID_transacCodePrestataireSignature__c.field-meta.xml
<CustomField>
    <fullName>ID_transacCodePrestataireSignature__c</fullName>
    <label>ID du code de transac. du prest. signat.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>