force-app/main/default/objects/eSign_Configuration__mdt/fields/ID_transacDemandeurApplicationSource__c.field-meta.xml
<CustomField>
    <fullName>ID_transacDemandeurApplicationSource__c</fullName>
    <label>ID du deman. de transac. de l&apos;app source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>