force-app/main/default/objects/eSign_Configuration__mdt/fields/ID_transacIdApplicationSource__c.field-meta.xml
<CustomField>
    <fullName>ID_transacIdApplicationSource__c</fullName>
    <label>ID de l&apos;id. de transac. de l&apos;app source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>