force-app/main/default/objects/eSign_Configuration__mdt/fields/nbJoursAvantRelance__c.field-meta.xml
<CustomField>
    <fullName>nbJoursAvantRelance__c</fullName>
    <label>nbJoursAvantRelance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>