force-app/main/default/objects/eSign_Configuration__mdt/fields/nbMaxRelance__c.field-meta.xml
<CustomField>
    <fullName>nbMaxRelance__c</fullName>
    <label>nbMaxRelance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>