force-app/main/default/objects/eSign_Configuration__mdt/fields/posSignXcachet__c.field-meta.xml
<CustomField>
    <fullName>posSignXcachet__c</fullName>
    <label>posSignXcachet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>