force-app/main/default/objects/eSign_Configuration__mdt/fields/posSignXrespAdmin__c.field-meta.xml
<CustomField>
    <fullName>posSignXrespAdmin__c</fullName>
    <label>posSignXrespAdmin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>