force-app/main/default/objects/eSign_Configuration__mdt/fields/posSignXrespEcole__c.field-meta.xml
<CustomField>
    <fullName>posSignXrespEcole__c</fullName>
    <label>posSignXrespEcole</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>