force-app/main/default/objects/eSign_Configuration__mdt/fields/posSignXstagiaire__c.field-meta.xml
<CustomField>
    <fullName>posSignXstagiaire__c</fullName>
    <label>posSignXstagiaire</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>