force-app/main/default/objects/eSign_Configuration__mdt/fields/posSignXtuteurEntreprise__c.field-meta.xml
<CustomField>
    <fullName>posSignXtuteurEntreprise__c</fullName>
    <label>posSignXtuteurEntreprise</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>