force-app/main/default/objects/eSign_Configuration__mdt/fields/posSignYcachet__c.field-meta.xml
<CustomField>
    <fullName>posSignYcachet__c</fullName>
    <label>posSignYcachet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>