force-app/main/default/objects/eSign_Configuration__mdt/fields/posSignYrespAdmin__c.field-meta.xml
<CustomField>
    <fullName>posSignYrespAdmin__c</fullName>
    <label>posSignYrespAdmin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>