force-app/main/default/objects/eSign_Configuration__mdt/fields/posSignYrespEcole__c.field-meta.xml
<CustomField>
    <fullName>posSignYrespEcole__c</fullName>
    <label>posSignYrespEcole</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>