force-app/main/default/objects/eSign_Configuration__mdt/fields/posSignYstagiaire__c.field-meta.xml
<CustomField>
    <fullName>posSignYstagiaire__c</fullName>
    <label>posSignYstagiaire</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>