force-app/main/default/objects/eSign_Configuration__mdt/fields/posSignYtuteurEntreprise__c.field-meta.xml
<CustomField>
    <fullName>posSignYtuteurEntreprise__c</fullName>
    <label>posSignYtuteurEntreprise</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>