force-app/main/default/objects/eSign_Configuration__mdt/fields/successURL__c.field-meta.xml
<CustomField>
    <fullName>successURL__c</fullName>
    <label>URL de succès</label>
    <length>255</length>
    <type>Text</type>
</CustomField>